@@ -61,6 +61,8 @@ private:
 
   // TODO : an unordered_map would be faster
   std::map<std::string,TTree*> m_treeRepository;
+
+  ZeroLeptonDerivationTag m_derivationTag;
 public:
   ClassDef(ZeroLeptonCRWT,0);
 };
