@@ -57,6 +57,8 @@ private:
 
   // TODO : an unordered_map would be faster
   std::map<std::string,TTree*> m_treeRepository;
+
+  ZeroLeptonDerivationTag m_derivationTag;
 public:
   ClassDef(ZeroLeptonCRZ,0);
 };
