@@ -13,4 +13,15 @@ inline ZeroLeptonRunPeriod periodFromString(const std::string& period)
   return INVALID;
 }
 
+enum ZeroLeptonDerivationTag {NotADerivation, p1872, INVALID_Derivation};
+
+inline ZeroLeptonDerivationTag derivationTagFromString(const std::string& tag)
+{
+  if ( tag == "" || tag =="None" || tag == "none" || tag == "NA") return NotADerivation;
+  if ( tag == "p1872" ) return p1872;
+  return INVALID_Derivation;
+}
+
+
+
 #endif
