@@ -9,6 +9,8 @@ Global.IsAtlfast: FALSE
 Global.Period: p13tev
 Global.cutfile: ZeroLeptonRun2/data/cutfile8TeV.dat
 Global.JetCollectionKey: AntiKt4LCTopoJets
+Global.JESNuisanceParameterSet: 0
+Global.DerivationTag: None
 
 # ---------------------------  Run configuration ----------------------
 cafe.Run:  JobBookeeping cafe::IfPr(datamc) BuildSUSYObjects(susyobjs) 
@@ -50,18 +52,21 @@ susyobjs.IsData: %{Global.IsData}
 susyobjs.JetCollectionKey: %{Global.JetCollectionKey}
 susyobjs.Period: %{Global.Period}
 susyobjs.IsAtlfast: %{Global.IsAtlfast}
+susyobjs.JESNuisanceParameterSet: %{Global.JESNuisanceParameterSet}
 
 # ---------------------------  Signal Region -----------------
 sr.IsData: %{Global.IsData}
 sr.cutfile: %{Global.cutfile}
 sr.IsSignal: %{Global.IsSignal}
 sr.Period: %{Global.Period}
+sr.DerivationTag: %{Global.DerivationTag}
 
 # ---------------------------  CRWT Region -----------------
 crwt.IsData: %{Global.IsData}
 crwt.cutfile: %{Global.cutfile}
 crwt.IsSignal: %{Global.IsSignal}
 crwt.Period: %{Global.Period}
+crwt.DerivationTag: %{Global.DerivationTag}
 
 # ---------------------------  VRWT Region -----------------
 vrwt.IsData: %{Global.IsData}
@@ -69,12 +74,14 @@ vrwt.cutfile: %{Global.cutfile}
 vrwt.IsVR: TRUE
 vrwt.IsSignal: %{Global.IsSignal}
 vrwt.Period: %{Global.Period}
+vrwt.DerivationTag: %{Global.DerivationTag}
 
 # ---------------------------  CRZ Region -----------------
 crz.IsData: %{Global.IsData}
 crz.cutfile: %{Global.cutfile}
 crz.IsSignal: %{Global.IsSignal}
 crz.Period: %{Global.Period}
+crz.DerivationTag: %{Global.DerivationTag}
 
 
 
@@ -85,11 +92,13 @@ susyobjsy.Period: %{Global.Period}
 susyobjsy.IsAtlfast: %{Global.IsAtlfast}
 susyobjsy.PhotonInOR: TRUE
 susyobjsy.suffix: cry
+susyobjsy.JESNuisanceParameterSet: %{Global.JESNuisanceParameterSet}
 
 # ---------------------------  CRY Region -----------------
 cry.IsData: %{Global.IsData}
 cry.cutfile: %{Global.cutfile}
 cry.IsSignal: %{Global.IsSignal}
 cry.Period: %{Global.Period}
+cry.DerivationTag: %{Global.DerivationTag}
 cry.suffix: cry
 
