@@ -1,4 +1,4 @@
-config/zerolepton.config#--------------------------------------------------------------------------
+#--------------------------------------------------------------------------
 # In order to work for local and release packages and/or for local and grid
 # one should only point to files via the ${ROOTCOREBIN}/data/<package>
 # 
@@ -9,6 +9,8 @@ Global.IsAtlfast: FALSE
 Global.Period: p13tev
 Global.cutfile: ZeroLeptonRun2/data/cutfile8TeV.dat
 Global.JetCollectionKey: AntiKt4LCTopoJets
+Global.JESNuisanceParameterSet: 0
+Global.DerivationTag: None
 
 # ---------------------------  Run configuration ----------------------
 cafe.Run:  JobBookeeping cafe::IfPr(datamc) ZeroLeptonSystVariations(systloop) 
@@ -53,6 +55,7 @@ susyobjs.JetCollectionKey: %{Global.JetCollectionKey}
 susyobjs.UseSystematics: TRUE
 susyobjs.Period: %{Global.Period}
 susyobjs.IsAtlfast: %{Global.IsAtlfast}
+susyobjs.JESNuisanceParameterSet: %{Global.JESNuisanceParameterSet}
 
 # ---------------------------  Signal Region -----------------
 sr.IsData: %{Global.IsData}
@@ -60,6 +63,8 @@ sr.cutfile: %{Global.cutfile}
 sr.IsSignal: %{Global.IsSignal}
 sr.UseSystematics: TRUE
 sr.Period: %{Global.Period}
+sr.DerivationTag: %{Global.DerivationTag}
+
 
 # ---------------------------  CRWT Region -----------------
 crwt.IsData: %{Global.IsData}
@@ -67,6 +72,7 @@ crwt.cutfile: %{Global.cutfile}
 crwt.IsSignal: %{Global.IsSignal}
 crwt.UseSystematics: TRUE
 crwt.Period: %{Global.Period}
+crwt.DerivationTag: %{Global.DerivationTag}
 
 # ---------------------------  VRWT Region -----------------
 vrwt.IsData: %{Global.IsData}
@@ -75,6 +81,7 @@ vrwt.IsVR: TRUE
 vrwt.IsSignal: %{Global.IsSignal}
 vrwt.UseSystematics: TRUE
 vrwt.Period: %{Global.Period}
+vrwt.DerivationTag: %{Global.DerivationTag}
 
 # ---------------------------  CRZ Region -----------------
 crz.IsData: %{Global.IsData}
@@ -82,6 +89,7 @@ crz.cutfile: %{Global.cutfile}
 crz.IsSignal: %{Global.IsSignal}
 crz.UseSystematics: TRUE
 crz.Period: %{Global.Period}
+crz.DerivationTag: %{Global.DerivationTag}
 
 # ---------------------------  Build physics objects -----------------
 susyobjsy.IsData: %{Global.IsData}
@@ -91,12 +99,14 @@ susyobjsy.IsAtlfast: %{Global.IsAtlfast}
 susyobjsy.PhotonInOR: TRUE
 susyobjsy.suffix: cry
 susyobjsy.UseSystematics: TRUE
+susyobjsy.JESNuisanceParameterSet: %{Global.JESNuisanceParameterSet}
 
 # ---------------------------  CRY Region -----------------
 cry.IsData: %{Global.IsData}
 cry.cutfile: %{Global.cutfile}
 cry.IsSignal: %{Global.IsSignal}
 cry.Period: %{Global.Period}
+cry.DerivationTag: %{Global.DerivationTag}
 cry.suffix: cry
 cry.UseSystematics: TRUE
 
