@@ -1,4 +1,11 @@
 15-Apr-2015 Laurent Duflot
+	* adapt to SUSYTools-00-05-00-26
+	* BuildSUSYObjs: set the DataSource property of SUSYTools,
+	set DoJetAreaCalib and DoJetGSCCalib to true
+	* BuildSUSYObjs, ZeroLeptonSr, ZeroLeptonCRxx, ZeroLeptonUtils: special case 
+	for p1872, use MET_TrackFix and MET_RefFinalFix
+
+15-Apr-2015 Laurent Duflot
 	* ZeroLeptonCRY: fix to cope with the case that there are no good jets
 	* tag ZeroLeptonRun2-00-00-28
 
